// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`snapshot of the base state 1`] = `
<DocumentFragment>
  <div
    class="ui-select"
  >
    <button
      aria-controls="ui-select-list"
      aria-haspopup="true"
      class="ui-select__label"
      data-testid="UiSelectButton"
    >
      <p
        class="ui-text ui-text-base"
      >
        Please select an option ...
      </p>
      <svg
        class="ui-select__caret ui-select__caret--closed"
        fill="none"
        height="1rem"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
        viewBox="0 0 24 24"
        width="1rem"
      >
        <path
          d="M19 9l-7 7-7-7"
        />
      </svg>
    </button>
    <ul
      aria-hidden="false"
      class="ui-select__overlay "
      id="ui-select-list"
      role="menu"
      style="top: 10px;"
    >
      <li
        aria-label="Strict Black"
        class="ui-select__option
                                
                                
                            "
        role="menuitemradio"
        tabindex="0"
      >
        <p
          class="ui-text ui-text-base"
        >
          Strict Black
        </p>
      </li>
      <li
        aria-label="Heavenly Green"
        class="ui-select__option
                                
                                
                            "
        role="menuitemradio"
        tabindex="0"
      >
        <p
          class="ui-text ui-text-base"
        >
          Heavenly Green
        </p>
      </li>
      <li
        aria-label="Sweet Pink"
        class="ui-select__option
                                
                                
                            "
        role="menuitemradio"
        tabindex="0"
      >
        <p
          class="ui-text ui-text-base"
        >
          Sweet Pink
        </p>
      </li>
    </ul>
  </div>
</DocumentFragment>
`;

exports[`snapshot of the options menu open state 1`] = `
<DocumentFragment>
  <div
    class="ui-select"
  >
    <button
      aria-controls="ui-select-list"
      aria-expanded="true"
      aria-haspopup="true"
      class="ui-select__label"
      data-testid="UiSelectButton"
    >
      <p
        class="ui-text ui-text-base"
      >
        Please select an option ...
      </p>
      <svg
        class="ui-select__caret ui-select__caret--open"
        fill="none"
        height="1rem"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
        viewBox="0 0 24 24"
        width="1rem"
      >
        <path
          d="M19 9l-7 7-7-7"
        />
      </svg>
    </button>
    <ul
      class="ui-select__overlay ui-select__overlay--open"
      id="ui-select-list"
      role="menu"
      style="top: 10px;"
    >
      <li
        aria-label="Strict Black"
        class="ui-select__option
                                
                                
                            "
        role="menuitemradio"
        tabindex="0"
      >
        <p
          class="ui-text ui-text-base"
        >
          Strict Black
        </p>
      </li>
      <li
        aria-label="Heavenly Green"
        class="ui-select__option
                                
                                
                            "
        role="menuitemradio"
        tabindex="0"
      >
        <p
          class="ui-text ui-text-base"
        >
          Heavenly Green
        </p>
      </li>
      <li
        aria-label="Sweet Pink"
        class="ui-select__option
                                
                                
                            "
        role="menuitemradio"
        tabindex="0"
      >
        <p
          class="ui-text ui-text-base"
        >
          Sweet Pink
        </p>
      </li>
    </ul>
  </div>
</DocumentFragment>
`;

exports[`snapshot of the selected option state 1`] = `
<DocumentFragment>
  <div
    class="ui-select"
  >
    <button
      aria-controls="ui-select-list"
      aria-haspopup="true"
      class="ui-select__label"
      data-testid="UiSelectButton"
    >
      <p
        class="ui-text ui-text-base"
      >
        Strict Black
      </p>
      <svg
        class="ui-select__caret ui-select__caret--closed"
        fill="none"
        height="1rem"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
        viewBox="0 0 24 24"
        width="1rem"
      >
        <path
          d="M19 9l-7 7-7-7"
        />
      </svg>
    </button>
    <ul
      aria-hidden="false"
      class="ui-select__overlay "
      id="ui-select-list"
      role="menu"
      style="top: 10px;"
    >
      <li
        aria-checked="true"
        aria-label="Strict Black"
        class="ui-select__option
                                ui-select__option--selected
                                
                            "
        role="menuitemradio"
        tabindex="0"
      >
        <p
          class="ui-text ui-text-base"
        >
          Strict Black
        </p>
        <svg
          fill="none"
          height="1rem"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="1rem"
        >
          <path
            d="M5 13l4 4L19 7"
          />
        </svg>
      </li>
      <li
        aria-label="Heavenly Green"
        class="ui-select__option
                                
                                
                            "
        role="menuitemradio"
        tabindex="0"
      >
        <p
          class="ui-text ui-text-base"
        >
          Heavenly Green
        </p>
      </li>
      <li
        aria-label="Sweet Pink"
        class="ui-select__option
                                
                                
                            "
        role="menuitemradio"
        tabindex="0"
      >
        <p
          class="ui-text ui-text-base"
        >
          Sweet Pink
        </p>
      </li>
    </ul>
  </div>
</DocumentFragment>
`;
